anadiendo carrusel de categorias

--- a/src/style.css
+++ b/src/style.css
@@ -172,3 +172,13 @@
   position: relative;
   border-radius: 5px;
 }
+
+.container-section-categories {
+  display: none;
+}
+
+.banner-secondary img {
+  width: 100%;
+  padding: 0 25px;
+  margin-bottom: 30px;
+}
