--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -1,5 +1,11 @@
+:root {
+  --emphasis-font: Lato, Arial, Helvetica, sans-serif;
+  --text-bold: bold;
+}
+
 .carousel {
-  padding: 0 40px;
+  padding: 0 60px;
+  margin: 60px;
 }
 
 .carousel__title {
@@ -42,4 +48,130 @@
 
 .banner__img:nth-child(6) {
   transform: translateY(10px);
+}
+
+/* Carrusel de caegorias */
+
+.container-section-categories {
+  padding-top: 50px;
+  margin-bottom: 60px;
+  background-color: #4659f5;
+  display: block;
+}
+
+.section-categories__title {
+  width: 80%;
+  margin: auto;
+}
+
+.section-categories__title h3 {
+  width: 72%;
+  font-size: 42px;
+  font-weight: var(--text-bold);
+  font-family: var(--emphasis-font);
+  color: #ffffff;
+}
+
+.section-categories__container {
+  padding-left: 30px;
+  position: relative;
+  overflow-x: scroll;
+}
+
+/* .carousel::-webkit-scrollbar {
+  display: none;
+} */
+
+.categories-carousel {
+  padding-bottom: 10px;
+  margin: 100px 0px 160px;
+  /* margin: 100px 0px; */
+  white-space: nowrap;
+  transition: 450ms -webkit-transform;
+  transition: 450ms transform;
+  transition: 450ms transform, 450ms -webkit-transform;
+}
+
+.categories-carousel__item {
+  height: 400px;
+  margin-right: 10px;
+  display: inline-block;
+  transform-origin: center left;
+  transition: 450ms all;
+  -webkit-transform-origin: center left;
+  cursor: pointer;
+}
+
+.categories-carousel__item:hover .category-item__button button {
+  display: block;
+}
+
+.categories-carousel__item:hover ~ .categories-carousel__item {
+  transform: translate3d(60px, 0, 0);
+  -webkit-transform: translate3d(60px, 0, 0);
+}
+
+.categories-carousel:hover .categories-carousel__item {
+  opacity: 0.3;
+}
+
+.categories-carousel:hover .categories-carousel__item:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  opacity: 1;
+}
+
+.category-item__img:hover::before {
+  opacity: 0.1;
+  content: "";
+  background: white;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 5px;
+  transition: all ease-in-out 0.15s;
+}
+
+.category-item__img {
+  /* width: 200px;
+  height: 250px; */
+  width: 300px;
+  height: 390px;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+}
+
+.category-item__img img {
+  width: 100%;
+}
+
+.category-item__button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.category-item__button p {
+  font-size: 24px;
+  font-weight: var(--text-bold);
+  font-family: var(--emphasis-font);
+  text-align: center;
+  color: #ffffff;
+}
+
+.category-item__button button {
+  width: 45%;
+  height: 40px;
+  padding: 0 15px;
+  margin-top: 15px;
+  display: none;
+  border: none;
+  border-radius: 4px;
+  background-color: #ffffff;
+  text-transform: uppercase;
+  color: #4759f5;
+  letter-spacing: 0;
+  font-family: var(--emphasis-font);
+  cursor: pointer;
 }
