--- a/src/styles/tablet.css
+++ b/src/styles/tablet.css
@@ -10,3 +10,138 @@
 .carousel-item__details p {
   font-size: 13px;
 }
+
+.banner-secondary {
+  max-width: 1260px;
+  margin: 60px auto;
+  padding: 0 25px;
+}
+
+.banner-secondary img {
+  padding: 0;
+  margin-bottom: 0;
+}
+
+.banner-secondary__row {
+  margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+/* Carrusel de caegorias */
+
+.container-section-categories {
+  padding-top: 50px;
+  margin-bottom: 60px;
+  background-color: #4659f5;
+  display: block;
+}
+
+.section-categories__title {
+  width: 90%;
+  margin: auto;
+}
+
+.section-categories__title h3 {
+  font-size: 42px;
+  font-weight: var(--text-bold);
+  font-family: var(--emphasis-font);
+  color: #ffffff;
+}
+
+.section-categories__container {
+  padding-left: 30px;
+  position: relative;
+  overflow-x: scroll;
+}
+
+.categories-carousel {
+  padding-bottom: 10px;
+  margin: 100px 0px;
+  white-space: nowrap;
+  transition: 450ms -webkit-transform;
+  transition: 450ms transform;
+  transition: 450ms transform, 450ms -webkit-transform;
+}
+
+.categories-carousel__item {
+  margin-right: 10px;
+  display: inline-block;
+  transform-origin: center left;
+  transition: 450ms all;
+  -webkit-transform-origin: center left;
+  cursor: pointer;
+}
+
+.categories-carousel__item:hover .category-item__button button {
+  display: block;
+}
+
+.categories-carousel__item:hover ~ .categories-carousel__item {
+  transform: translate3d(40px, 0, 0);
+  -webkit-transform: translate3d(40px, 0, 0);
+}
+
+.categories-carousel:hover .categories-carousel__item {
+  opacity: 0.3;
+}
+
+.categories-carousel:hover .categories-carousel__item:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  opacity: 1;
+}
+
+.category-item__img:hover::before {
+  opacity: 0.1;
+  content: "";
+  background: white;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 5px;
+  transition: all ease-in-out 0.15s;
+}
+
+.category-item__img {
+  width: 200px;
+  height: 250px;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+}
+
+.category-item__img img {
+  width: 100%;
+}
+
+.category-item__button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.category-item__button p {
+  font-size: 24px;
+  font-weight: var(--text-bold);
+  font-family: var(--emphasis-font);
+  text-align: center;
+  color: #ffffff;
+}
+
+.category-item__button button {
+  width: 70%;
+  height: 40px;
+  padding: 0 15px;
+  margin-top: 15px;
+  display: none;
+  border: none;
+  border-radius: 4px;
+  background-color: #ffffff;
+  text-transform: uppercase;
+  color: #4759f5;
+  letter-spacing: 0;
+  font-family: var(--emphasis-font);
+  cursor: pointer;
+}
