--- a/src/styles/tablet.css
+++ b/src/styles/tablet.css
@@ -56,6 +56,27 @@
   overflow-x: scroll;
 }
 
+.section-categories__container::-webkit-scrollbar {
+  height: 6px;
+}
+
+.section-categories__container::-webkit-scrollbar-track {
+  background: #3c3c3c39;
+  border-radius: 4px;
+}
+.section-categories__container::-webkit-scrollbar-thumb {
+  background: #4141418b;
+  border-radius: 6px;
+}
+
+.section-categories__container::-webkit-scrollbar-thumb:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+.section-categories__container::-webkit-scrollbar-track:hover,
+.section-categories__container::-webkit-scrollbar-track:active {
+  background-color: #3c3c3c4f;
+}
+
 .categories-carousel {
   padding-bottom: 10px;
   margin: 100px 0px;
@@ -109,7 +130,6 @@
   height: 250px;
   display: inline-block;
   position: relative;
-  overflow: hidden;
 }
 
 .category-item__img img {
