--- a/src/styles/tablet.css
+++ b/src/styles/tablet.css
@@ -11,24 +11,6 @@
   font-size: 13px;
 }
 
-.banner-secondary {
-  max-width: 1260px;
-  margin: 60px auto;
-  padding: 0 25px;
-}
-
-.banner-secondary img {
-  padding: 0;
-  margin-bottom: 0;
-}
-
-.banner-secondary__row {
-  margin-bottom: 30px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
-}
-
 /* Carrusel de caegorias */
 
 .container-section-categories {
@@ -164,4 +146,27 @@
   letter-spacing: 0;
   font-family: var(--emphasis-font);
   cursor: pointer;
+}
+
+.banner-secondary {
+  padding: 0 25px;
+  margin: 60px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.banner-secondary__img,
+.banner-secondari__img--horizontal {
+  padding: 0;
+  margin-bottom: 0;
+}
+
+.banner-secondary__img {
+  width: 48%;
+}
+
+.banner-secondari__img--horizontal {
+  width: 100%;
+  margin-top: 30px;
 }
